--- a/terraformNginx/front/index.html
+++ b/terraformNginx/front/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vote App</title>
+    <title>Terraform 101</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css">
@@ -35,6 +35,9 @@
 
       <div class="center row " >
         <div class="col-md-12">
+          <span>
+            devopeiros que já acessaram
+          </span>
           <input id="count" value="0" />
         </div>
       </div>
